--- a/index.Rmd
+++ b/index.Rmd
@@ -170,9 +170,6 @@ This map only conveys totals for each state, but I would be interested in furthe
 
 [This](https://www.nytimes.com/interactive/2020/09/02/upshot/america-political-spectrum.html) New York Times Upshot article called _"The True Colors of America's Political Spectrum Are Gray and Green"_ examines how satellite images of the United States tend to be accurate indicators of voting patterns. In the 2016 election, places with more greenery (often rural areas) leaned towards Trump, while places with more gray in the satellite images (indicating roads and buildings) leaned towards Clinton. An extension of this project could be examining how the average number and value of expenditures for each candidate varies across the satellite image color spectrum.
 
-![](https://raw.githubusercontent.com/stat231-s21/Blog-Nate-Platinum/main/images/NYTimes1.png)
-![](https://raw.githubusercontent.com/stat231-s21/Blog-Nate-Platinum/main/images/NYTimes2.png)
-
 ## Individual Contributions Breakdown
 This bar graph illustrates the total number of individual contributions, in millions, broken down by different expenditure thresholds for both Donald Trump and Joe Biden. 
 
@@ -213,24 +210,22 @@ ggplot(data = contribution_breakdown_clean, aes(x=candidate, y=contribution/1000
   theme(plot.title = element_text(size = 20))
 ```
 
-### 5 College Donations - Employees living in Amherst
-```{r, message = FALSE, echo=FALSE}
+### Donations from UMass & Amherst College Employees (who live in Amherst)
+```{r, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 library(tidyverse)
 library(gganimate)
+library(ggthemes)
 
 amherst_donations <- read_csv(here("Data", "AmherstDonations.csv"))
 
+# AMHERST COLLEGE VISUALIZATION
 amherstcol_donations <- amherst_donations %>%
   filter(contributor_employer == "AMHERST COLLEGE") %>%
   filter(committee_name != "WIN THE ERA PAC")
 
-ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point() + scale_color_manual(values = c( "#228b22","#add8e6", "#00008b", "#ffa500"))
+ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + scale_color_manual(values = c( "#228b22","#add8e6", "#00008b", "#ffa500")) + ylim(0, 600) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name")  + theme_wsj(base_size = 12, color = "gray") + ggtitle("Amherst College Employee Donations") + guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 10))
 
-mtholyoke_donations <- amherst_donations %>%
-  filter(contributor_employer == "MOUNT HOLYOKE COLLEGE")
-
-ggplot(data = mtholyoke_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point() + scale_color_manual(values = c("#add8e6", "#00008b", "#ffa500"))
-
+#UMASS VISUALIZATION
 umass_donations <- amherst_donations %>%
   mutate(umass_employer = (case_when(
          str_detect(contributor_employer, "UMASS") ~ "UMASS",
@@ -247,11 +242,17 @@ umass_donations <- amherst_donations %>%
          str_detect(contributor_employer, "UNIVERSITY OF MASSACHUSETTS-AMHERST") ~ "UMASS",
          str_detect(contributor_employer, "UNIVERSITY OF MASSACHUSETTS") ~ "UMASS"
          ))) %>%
-   filter(committee_name != "BENNET FOR AMERICA") %>%
-   filter(committee_name != "BULLOCK FOR PRESIDENT") %>%
-   filter(committee_name != "BENNET FOR AMERICA") %>%
+  filter(committee_name != "BENNET FOR AMERICA") %>%
+  filter(committee_name != "BULLOCK FOR PRESIDENT") %>%
+  filter(committee_name != "BENNET FOR AMERICA") %>%
+  filter(committee_name != "INSLEE FOR AMERICA") %>%
+  filter(committee_name != "SETH MOULTON FOR AMERICA, INC.") %>%
+  filter(committee_name != "WELD 2020 PRESIDENTIAL CAMPAIGN COMMITTEE, INC.") %>%
+  filter(committee_name != "WIN THE ERA PAC") %>%
+  filter(committee_name != "CORY 2020")
 
-ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point()
+ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#228b22", "#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500")) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +   guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 10))
+
 ```
 
 
