--- a/index.Rmd
+++ b/index.Rmd
@@ -188,7 +188,7 @@ ggplot(data = contribution_breakdown_clean, aes(x=candidate, y=contribution/1000
 ```
 
 ### Donations from UMass & Amherst College Employees (who live in Amherst)
-```{r, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
+```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 library(tidyverse)
 library(gganimate)
 library(ggthemes)
@@ -202,6 +202,12 @@ amherstcol_donations <- amherst_donations %>%
 
 ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + scale_color_manual(values = c( "#228b22","#add8e6", "#00008b", "#ffa500")) + ylim(0, 600) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name")  + theme_wsj(base_size = 12, color = "gray") + ggtitle("Amherst College Employee Donations") + guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 10))
 
+```
+
+This scatter plot shows all 2019-2020 donations made by individuals who are Amherst College employees residing in Amherst. It seems that in the early days of the primaries, many Amherst College employees were optimistic that Elizabeth Warren would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to Warren For President, Inc. There were also quite a few donations to Bernie during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding. No Amherst College employees residing in Amherst donated to Trump. Many of the donations remained in the \$200 and under range, with donation size increasing as the election drew closer. The largest donation was $1000.
+
+
+```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 #UMASS VISUALIZATION
 umass_donations <- amherst_donations %>%
   mutate(umass_employer = (case_when(
@@ -226,14 +232,12 @@ umass_donations <- amherst_donations %>%
   filter(committee_name != "SETH MOULTON FOR AMERICA, INC.") %>%
   filter(committee_name != "WELD 2020 PRESIDENTIAL CAMPAIGN COMMITTEE, INC.") %>%
   filter(committee_name != "WIN THE ERA PAC") %>%
-  filter(committee_name != "CORY 2020")
+  filter(committee_name != "CORY 2020") %>%
+  filter(umass_employer == "UMASS")
 
-ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#228b22", "#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500")) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +   guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 10))
-
+ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500")) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +   guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 10))
 ```
-
-
-
+This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. Similar to Amherst College employees, many early donations were made to Elizabeth Warren and Bernie, while many more donations were made to Joe Biden post-primaries. In total, 195 donations were made to Biden, while 17 donations were made to Trump.
 
 ### Conclusion
 
