--- a/index.Rmd
+++ b/index.Rmd
@@ -189,7 +189,7 @@ ggplot(data = contribution_breakdown_clean, aes(x=candidate, y=contribution/1000
   theme(plot.title = element_text(size = 20))
 ```
 
-### Donations from UMass & Amherst College Employees (who live in Amherst)
+### Donations from UMass & Amherst College Employees (who live in Amherst) to Main Candidates
 ```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 library(tidyverse)
 library(gganimate)
@@ -207,6 +207,8 @@ ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contr
 ```
 
 This scatter plot shows all 2019-2020 donations made by individuals who are Amherst College employees residing in Amherst. It seems that in the early days of the primaries, many Amherst College employees were optimistic that Elizabeth Warren would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to Warren For President, Inc. There were also quite a few donations to Bernie Sanders during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding. No Amherst College employees residing in Amherst donated to Trump. Many of the donations remained in the \$200 and under range, with donation size increasing as the election drew closer. The largest donation was $1000.
+
+
 
 
 ```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
@@ -243,13 +245,12 @@ ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contributi
 This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. Similar to Amherst College employees, many early donations were made to Elizabeth Warren and Bernie Sanders, while many more donations were made to Joe Biden post-primaries. In total, 195 donations were made to Biden, while 17 donations were made to Trump.
 
 ### Conclusion
-This project explores 2020 election finance information at many levels, examining expenditures on both a macro and micro scale. The network and table convey information about expenditures by PACs and Super PACS, the map shows aggregated individual contributions by state, and the scatter plots display individual contributions from Amherst College and UMass employees who live in Amherst. While many people believe that large organizations and Super PACs comprise the majority of campaign spending, in reality, individual contributions are the most important. In 2020, organizations and 8.13% of funds were from PACs and organizations and 13.01% were from self-funding, while 63.93% were from individual donations (with the last 14.93% labeled as "other"). Thus, it is important to recognize the critical role that the general public has in the electoral process, both from a voting and a spending perspective. Ultimately, I 
+This project explores 2020 election finance information at many levels, examining expenditures on both a macro and micro scale. The network and table convey information about expenditures by PACs and Super PACS, the map shows aggregated individual contributions by state, and the scatter plots display individual contributions from Amherst College and UMass employees who live in Amherst. While many people believe that large organizations and Super PACs comprise the majority of campaign spending, in reality, individual contributions are the most important. In 2020, organizations and 8.13% of funds were from PACs and organizations and 13.01% were from self-funding, while 63.93% were from individual donations (with the last 14.93% labeled as "other"). Ultimately, it is important to recognize the critical role that the general public has in the electoral process, both from a voting and a spending perspective.
 
 ### Citations
+- “2020 Election to Cost $14 Billion, Blowing Away Spending Records.” OpenSecrets News, 28 Oct. 2020, www.opensecrets.org/news/2020/10/cost-of-2020-election-14billion-update/.
+- “2020 Election United States President.” FEC.gov, www.fec.gov/data/elections/president/2020/.
 - “Browse Individual Contributions.” FEC.gov, www.fec.gov/data/receipts/individual-contributions/?recipient_committee_type=P&amp;contributor_zip=01002&amp;contributor_city=Amherst&amp;two_year_transaction_period=2020. 
 - Schwartz, Brian. “Total 2020 Election Spending to Hit Nearly $14 Billion, More than Double 2016's Sum.” CNBC, CNBC, 2 Nov. 2020, www.cnbc.com/2020/10/28/2020-election-spending-to-hit-nearly-14-billion-a-record.html. 
 - Wallace, Tim, and Krishna Karra. “The True Colors of America's Political Spectrum Are Gray and Green.” The New York Times, The New York Times, 2 Sept. 2020, www.nytimes.com/interactive/2020/09/02/upshot/america-political-spectrum.html. 
 - Wilke, Claus. “Relayer.” GitHub, github.com/clauswilke/relayer.
-- “2020 Election United States President.” FEC.gov, www.fec.gov/data/elections/president/2020/.
-
-https://www.opensecrets.org/news/2020/10/cost-of-2020-election-14billion-update/
