--- a/index.Rmd
+++ b/index.Rmd
@@ -32,7 +32,7 @@ library(DT)
 
 
 We live in a world where money and politics are largely intertwined. This fact is starkly apparent when examining the net worth of certain 2020 presidential candidates. Michael Bloomberg, who has a net worth of \$59 billion, spent over \$1 billion on his own candidacy. Tom Steyer, a former hedge fund manager and billionaire, also made a run for President. The 45th President, Donald Trump, made a fortune through his real estate empire, allocating millions to his campaign. The 2020 election, including both presidential and congressional races, cost a record-breaking <span style="color:red">*$14 billion*</span>
-. Aside from candidates' own wealth, **where is the rest of this campaign money coming from?** I set out to address questions pertaining to 2020 election finances, seeking to understand who is making political donations and to whom they are supporting. The three main datasets I used were all from the [Federal Election Commission](https://www.fec.gov/data/elections/president/2020/), and focused on independent expenditures, individual contributions by state, and individual contributions broken down by expenditure level. The last dataset, which has observations for each contribution made by a person living in Amherst from 2019-2020 (85,662 observations), was a filtered version of [this](https://www.fec.gov/data/receipts/individual-contributions/?recipient_committee_type=P&contributor_zip=01002&contributor_city=Amherst&two_year_transaction_period=2020) entire individual contributions dataset.
+. Aside from candidates' own wealth, **where is the rest of this campaign money coming from?** I set out to address questions pertaining to 2020 election finances, seeking to understand who is making political donations and to whom they are supporting. The three main datasets I used were all from the [Federal Election Commission](https://www.fec.gov/data/elections/president/2020/), and focused on independent expenditures, individual contributions by state, and individual contributions broken down by expenditure level. The last dataset, which has observations for each contribution made by a person living in Amherst from 2019-2020 (85,662 observations), was a filtered version of [this](https://www.fec.gov/data/receipts/individual-contributions/?recipient_committee_type=P&contributor_zip=01002&contributor_city=Amherst&two_year_transaction_period=2020) entire individual contributions dataset, and also removed variables such as name, address, zip code, and occupation.
 
 ## Independent Expenditures for Joe Biden & Donald Trump
 
