--- a/index.Rmd
+++ b/index.Rmd
@@ -206,7 +206,7 @@ ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contr
 
 ```
 
-This scatter plot shows all 2019-2020 donations made by individuals who are Amherst College employees residing in Amherst. It seems that in the early days of the primaries, many Amherst College employees were optimistic that Elizabeth Warren would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to Warren For President, Inc. There were also quite a few donations to Bernie Sanders during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding in. No Amherst College employees residing in Amherst donated to Trump. Many of the donations remained in the \$200 and under range, with donation size increasing as the election drew closer. One outlier not shown on the plot was a \$1000 donation made to Bernie Sanders.
+This scatter plot shows all 2019-2020 donations made by individuals who are Amherst College employees residing in Amherst. It seems that in the early days of the primaries, many Amherst College employees were optimistic that Elizabeth Warren would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to Warren For President, Inc. There were also quite a few donations to Bernie Sanders during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding in. No Amherst College employees residing in Amherst donated to Trump. Many of the donations remained in the \$200 and under range, with donation size increasing as the election drew closer. One outlier not shown on the plot was a \$1000 donation made to Bernie Sanders in December 2019.
 
 
 
