--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ library(igraph)
 library(maps)
 library(scales)
 library(DT)
+library(ggthemes)
 ```
 
 ## Introduction
@@ -189,29 +190,11 @@ This bar graph illustrates the total number of individual contributions, in mill
 
 The limitation of this bar graph is that it does not tell us the number of donations made for each candidate. It is quite plausible that Trump had more donors than Biden in certain brackets, but these donors gave at the lower bound of the range, resulting in a lower overall total. I would be interested in acquiring data that show the number and exact value of each individual donation within specific spending ranges.
 
-### Donations from UMass & Amherst College Employees (who live in Amherst) to Main Candidates
-```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
-library(tidyverse)
-library(gganimate)
-library(ggthemes)
+### Donations from UMass Employees (who live in Amherst) to Main Candidates
 
+```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 amherst_donations <- read_csv(here("Data", "AmherstDonations.csv"))
 
-# AMHERST COLLEGE VISUALIZATION
-amherstcol_donations <- amherst_donations %>%
-  filter(contributor_employer == "AMHERST COLLEGE") %>%
-  filter(committee_name != "WIN THE ERA PAC")
-
-ggplot(data = amherstcol_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + scale_color_manual(values = c( "#228b22","#add8e6", "#00008b", "#ffa500")) + ylim(0, 600) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name")  + theme_wsj(base_size = 12, color = "gray") + ggtitle("Amherst College Employee Donations") + guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 14))
-
-```
-
-This scatter plot shows all 2019-2020 donations made by individuals who are Amherst College employees residing in Amherst. It seems that in the early days of the primaries, many Amherst College employees were optimistic that Elizabeth Warren would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to Warren For President, Inc. There were also quite a few donations to Bernie Sanders during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding in. No Amherst College employees residing in Amherst donated to Trump. Many of the donations remained in the \$200 and under range, with donation size increasing as the election drew closer. One outlier not shown on the plot was a \$1000 donation made to Bernie Sanders in December 2019.
-
-
-
-
-```{r, warning = FALSE, message = FALSE, echo=FALSE, fig.width = 15, fig.height = 8}
 #UMASS VISUALIZATION
 umass_donations <- amherst_donations %>%
   mutate(umass_employer = (case_when(
@@ -242,7 +225,10 @@ umass_donations <- amherst_donations %>%
 ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500")) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +   guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 14))
 ```
 
-This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. Similar to Amherst College employees, many early donations were made to Elizabeth Warren and Bernie Sanders, while many more donations were made to Joe Biden post-primaries. In total, 195 donations were made to Biden, while 17 donations were made to Trump.
+This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. It seems that in the early days of the primaries, many UMass employees were optimistic that either Elizabeth Warren or Bernie Sanders would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to these two candidates. There were also quite a few donations to Andrew Yang during this time frame. Once Biden clinched the Democratic nomination in the August 2020 primaries, donations for Biden came flooding in. In total, 195 donations were made to Biden, while 17 donations were made to Trump.
+
+
+
 
 ### Conclusion
 This project explores 2020 election finance information at many levels, examining expenditures on both a macro and micro scale. The network and table convey information about expenditures by PACs and Super PACS, the map shows aggregated individual contributions by state, and the scatter plots display individual contributions from Amherst College and UMass employees who live in Amherst. While many people believe that large organizations and Super PACs comprise the majority of campaign spending, in reality, individual contributions are the most important. In 2020, organizations and 8.13% of funds were from PACs and organizations and 13.01% were from self-funding, while 63.93% were from individual donations (with the last 14.93% labeled as "other"). Ultimately, it is important to recognize the critical role that the general public has in the electoral process, not only from a voting perspective, but from a spending perspective.
