--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ We live in a world where money and politics are largely intertwined. This fact i
 
 ## Independent Expenditures for Joe Biden & Donald Trump
 
-I used one dataset, entitled "IndependentExpenditures.csv", to understand how much money different organizations spent either supporting or opposing Joe Biden and Donald Trump, the two main presidential candidates in the 2020 general election. The dataset contained 863 observations, indicating that there were expenditures from 863 organizations, ranging in size from $2.80 to over $133 million. In order to make a network visualizing the connections between different organizations and the two candidates, I filtered the data to include only donations that were larger than $10 million.
+I used the independent expenditures dataset to understand how much money different organizations spent either supporting or opposing Joe Biden and Donald Trump, the two main presidential candidates in the 2020 general election. The dataset contained 863 observations, indicating that there were expenditures from 863 organizations, ranging in size from $2.80 to over $133 million. In order to make a network visualizing the connections between different organizations and the two candidates, I filtered the data to include only donations that were larger than $10 million.
 
 ```{r fig.width = 35, fig.height = 15, message = FALSE, echo=FALSE}
 independent_expenditures <- read_csv(here("Data", "IndependentExpenditures.csv"))
